feat: 新增查詢活動已報名帳號的 API
